--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hello
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+        <title>First_Git_Trials</title>
+        <link rel="stylesheet" type="text/css" href="css\styles.css">
+	</head>
+	<body>
+		<div id="top">
+			<header id="NAGLOWEK">Nagłówek szablonu</header>
+			<nav id="MENU">Menu nawigacyjne</nav>
+			<aside id="INFORMACJE">Dodatkowe informacje</aside>
+			<article id="TRESC">Treść strony</article>
+			<footer id="STOPKA">Stopka serwisu</footer>
+		</div>
+	</body>
+</html>
