--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
         <link rel="stylesheet" type="text/css" href="css\styles.css">
 	</head>
 	<body>
-		<div id="top">
-			<header id="NAGLOWEK">Nagłówek szablonu</header>
-			<nav id="MENU">Menu nawigacyjne</nav>
-			<aside id="INFORMACJE">Dodatkowe informacje</aside>
-			<article id="TRESC">Treść strony</article>
-			<footer id="STOPKA">Stopka serwisu</footer>
-		</div>
+        <h2>Humble and Grumble</h2>
+        <i> by Eldred Herbert </i>
+        <p>Humble and Grumble were identical twins,<br>
+        And Humble was ever so meek;<br>
+        Grumble did nothing but grumble all day,<br>
+        Some may even call him a freak.<br><br>
+
+        Humble was happy and everyone’s friend,<br>
+        Grumble was jealous of course;<br>
+        Humble was happy to follow the Lord,<br>
+        But Grumble, an immoral source.<br><br>
+
+        Humble was never seen wearing a frown,<br>
+        And Grumble, ne’er seen with a smile;<br>
+        Humble won friends by just being himself,<br>
+        But, Grumble, he won them by guile.<br><br>
+
+        So Grumble, please follow Humble, your twin,<br>
+        And Humble, don’t grumble, I pray,<br>
+        For grumble will make you like Grumble, your twin,<br>
+        Please Grumble, be humble today.</p>
 	</body>
 </html>
