Update first line with bold

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div>
             <h2>Humble and Grumble</h2>
             <i> by Eldred Herbert </i>
-            <p>Humble and Grumble were identical twins,<br>
+            <p><b>Humble and Grumble were identical twins,<b><br>
             And Humble was ever so meek;<br>
             Grumble did nothing but grumble all day,<br>
             Some may even call him a freak.<br><br>
