Add bold to second paragraph

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             Grumble did nothing but grumble all day,<br>
             Some may even call him a freak.<br><br>
 
-            Humble was happy and everyone’s friend,<br>
+            <b>Humble was happy and everyone’s friend,<br>
             Grumble was jealous of course;<br>
             Humble was happy to follow the Lord,<br>
-            But Grumble, an immoral source.<br><br>
+            But Grumble, an immoral source.</b><br><br>
 
             Humble was never seen wearing a frown,<br>
             And Grumble, ne’er seen with a smile;<br>
